# TruGaming

./: .gitignore  CMakeLists.txt  README.md
Dependencies/SFML/RELEASE/32Bit/OS_WINDOWS/: CMakeCache.txt  Makefile  SFMLStaticTargets.cmake  cmake_install.cmake  install_manifest.txt
Dependencies/SFML/RELEASE/32Bit/OS_WINDOWS/include/SFML/: Graphics.hpp
Dependencies/SFML/RELEASE/32Bit/OS_WINDOWS/include/SFML/Graphics/: RenderTexture.hpp
Dependencies/SFML/RELEASE/32Bit/OS_WINDOWS/src/SFML/Audio/: Makefile
Dependencies/SFML/RELEASE/32Bit/OS_WINDOWS/src/SFML/Graphics/: Makefile
Dependencies/SFML/RELEASE/32Bit/OS_WINDOWS/src/SFML/Main/: Makefile  cmake_install.cmake
Dependencies/SFML/RELEASE/32Bit/OS_WINDOWS/src/SFML/System/: Makefile  cmake_install.cmake
Dependencies/SFML/RELEASE/32Bit/OS_WINDOWS/src/SFML/Window/: Makefile
Dependencies/SFML/RELEASE/32Bit/src/SFML/: Makefile  cmake_install.cmake
Dependencies/SFML/RELEASE/32Bit/src/SFML/Audio/: cmake_install.cmake
Dependencies/SFML/RELEASE/32Bit/src/SFML/Graphics/: cmake_install.cmake
Dependencies/SFML/RELEASE/32Bit/src/SFML/Network/: Makefile  cmake_install.cmake
Dependencies/SFML/RELEASE/32Bit/src/SFML/Window/: cmake_install.cmake
Dependencies/SFML/RELEASE/64Bit/: CMakeCache.txt  Makefile  cmake_install.cmake
Dependencies/SFML/RELEASE/64Bit/OS_LINUX/share/SFML/doc/html/: annotated.html  hierarchy.html  namespaces.html
Dependencies/SFML/RELEASE/64Bit/OS_WINDOWS/: SFMLStaticTargets.cmake  install_manifest.txt
Dependencies/SFML/RELEASE/64Bit/OS_WINDOWS/src/SFML/: Makefile  cmake_install.cmake
Dependencies/SFML/RELEASE/64Bit/OS_WINDOWS/src/SFML/Audio/: cmake_install.cmake
Dependencies/SFML/RELEASE/64Bit/OS_WINDOWS/src/SFML/Graphics/: Makefile
Dependencies/SFML/RELEASE/64Bit/OS_WINDOWS/src/SFML/Main/: cmake_install.cmake
Dependencies/SFML/RELEASE/64Bit/OS_WINDOWS/src/SFML/Network/: Makefile
Dependencies/SFML/RELEASE/64Bit/OS_WINDOWS/src/SFML/System/: Makefile  cmake_install.cmake
Dependencies/SFML/RELEASE/64Bit/OS_WINDOWS/src/SFML/Window/: Makefile  cmake_install.cmake
Dependencies/SFML/RELEASE/64Bit/src/SFML/Audio/: Makefile
Dependencies/SFML/RELEASE/64Bit/src/SFML/Graphics/: cmake_install.cmake
Dependencies/SFML/RELEASE/64Bit/src/SFML/Main/: Makefile
Dependencies/SFML/RELEASE/64Bit/src/SFML/Network/: cmake_install.cmake
Executable/: linux_x86-64_TruGaming
Source/: Application.cpp  Application.h
Source/Audio/: Audio.h
Source/Constants/: Singleton.h
Source/FileSystem/: GameChunk.cpp  GameChunk.h  Map  Map.json  MapEditor.cpp  MapEditor.h  MapFileSystem.cpp  MapFileSystem.h  chunk_1_1.json  jsonFileFormat.txt  x_x.chunk
Source/GameManager/: GameChunk.cpp  GameChunk.h
Source/GameManager/Entities/: Entity.h  GameChunk.cpp  GameChunk.h  Player.h  Tilemap.h
Source/GameManager/GameChunks/: ChunkFinder.cpp  ChunkFinder.h
Source/GameManager/GameText/: GameText.cpp  GameText.h
Source/GameManager/Graphics/: Animation.cpp  Animation.h
Source/GameManager/MapEditor/: MapEditor.cpp  MapEditor.h  MapUpdater.cpp  MapUpdater.h
Source/GameManager/States/: State.h
Source/GameManager/Views/: TitleScreen.cpp  TitleScreen.h  View.h  WorldView.cpp  WorldView.h
Source/Movement/: PlayerMovement.cpp  PlayerMovement.h
Source/Physics/: Timestep.cpp  Timestep.h
Source/TextureManager/: Tile.h  Tilemap.h
Source/TextureManager/TileMap/: TileToNumberConverter.h  tileToNumber.json
